Social footer alignment fix

--- a/css/index.css
+++ b/css/index.css
@@ -27,7 +27,7 @@
 }
 .social .fb{
     display:inline-block;
-    vertical-align:4px;
+    vertical-align:3px;
 }
 .info a{
     color: #666;
